--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,9 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+# Rider Ide
+.idea/
+
+# JetBrains Rider / ReSharper user-specific settings
+*.sln.DotSettings.user
