--- a/src/Authentication.Api/Authentication.Api.csproj
+++ b/src/Authentication.Api/Authentication.Api.csproj
@@ -7,7 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
+        <PackageReference Include="Shared.Abstractions" Version="1.0.0" />
+        <PackageReference Include="Shared.Infrastructure" Version="1.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Authentication.Domain\Authentication.Domain.csproj" />
     </ItemGroup>
 
 </Project>
