--- a/src/Authentication.Api/Authentication.Api.csproj
+++ b/src/Authentication.Api/Authentication.Api.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\Authentication.Domain\Authentication.Domain.csproj" />
       <ProjectReference Include="..\Authentication.Application\Authentication.Application.csproj" />
+      <ProjectReference Include="..\Authentication.Domain\Authentication.Domain.csproj" />
     </ItemGroup>
 
 </Project>
