--- a/src/Authentication.Api/Authentication.Api.csproj
+++ b/src/Authentication.Api/Authentication.Api.csproj
@@ -16,6 +16,7 @@
       <ProjectReference Include="..\..\Authentication.Domain\Authentication.Domain.csproj" />
       <ProjectReference Include="..\Authentication.Application\Authentication.Application.csproj" />
       <ProjectReference Include="..\Authentication.Domain\Authentication.Domain.csproj" />
+      <ProjectReference Include="..\Authentication.Infrastructure\Authentication.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
