--- a/src/Authentication.Api/appsettings.json
+++ b/src/Authentication.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtOptions": {
+    "Key": "tempKey",
+    "ExpiresInSeconds": 3600
+  }
 }
