fix: incorrect Domain reference in Api.csproj
+ secret key for jwt should be at least 128 bits

--- a/src/Authentication.Api/appsettings.json
+++ b/src/Authentication.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "JwtOptions": {
-    "Key": "tempKey",
+    "Key": "tempKeyTempKeyTempKeyTempKeyTempKeyTempKey",
     "ExpiresInSeconds": 3600
   }
 }
