--- a/src/Authentication.Api/Authentication.Api.csproj
+++ b/src/Authentication.Api/Authentication.Api.csproj
@@ -10,10 +10,11 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
         <PackageReference Include="Shared.Abstractions" Version="1.0.0" />
         <PackageReference Include="Shared.Infrastructure" Version="1.0.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.4" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Authentication.Domain\Authentication.Domain.csproj" />
+      <ProjectReference Include="..\Authentication.Domain\Authentication.Domain.csproj" />
       <ProjectReference Include="..\Authentication.Application\Authentication.Application.csproj" />
       <ProjectReference Include="..\Authentication.Domain\Authentication.Domain.csproj" />
       <ProjectReference Include="..\Authentication.Infrastructure\Authentication.Infrastructure.csproj" />
